cmake_minimum_required(VERSION 3.21)
project(dynamic_programming)

set(CMAKE_CXX_STANDARD 14)
add_executable(coin_change Coin_change.cpp)
add_executable(short shortest_path.cpp)
add_executable(text_j text_justification.cpp)
add_executable(edit edit_distance.cpp)
add_executable(lccs longest_common_subsequence.cpp)
add_executable(matrix matrix_multiplication.cpp)
add_executable(subset subset_sum.cpp)
add_executable(ksum k_sum.cpp)
add_executable(knapsack knapsack.cpp)
add_executable(rod Rods.cpp)
add_executable(lis lis/LIS.cpp lis/random_A.cpp)
add_executable(lonP LongestPalindromicSubstring.cpp)
